fix: get rid of duplicated scrollbars [YTFRONT-4840]

--- a/packages/ui/src/ui/pages/navigation/content/Table/DataTableWrapper/DataTableWrapper.scss
+++ b/packages/ui/src/ui/pages/navigation/content/Table/DataTableWrapper/DataTableWrapper.scss
@@ -14,7 +14,7 @@
         margin-top: 50px;
         padding: 0 10px;
         width: 100vw;
-        height: calc(100vh - 50px);
+        height: calc(100vh - var(--app-header-height) - var(--app-footer-height));
         overflow: auto;
     }
 
